[tool.poetry]
name = "explore-streamlit"
version = "0.1.0"
description = ""
authors = ["Dhavaleswar <93dhavaleshwar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
streamlit = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

